Fixed problem with too small container if calculation is 10x10

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 
 .multi-container {
-  max-width: 12rem;
+  max-width: 14rem;
   display: flex;
   flex-direction: column;
 }
